--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-admin-ts",
+  "name": "react-antd-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.0.12",
-    "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "antd": "^3.20.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.8.23"
   }
 }
