--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/g2": "^3.5.8-beta.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.12",
     "@types/react-dom": "16.8.4",
     "antd": "^3.20.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
